src/syntax/token_stream/snapshots/ling__syntax__token_stream__tests__token_tree_0.snap
---
source: src/syntax/token_stream/mod.rs
expression: "get_stream(\"( { ) } ( hello )\")"
---
(TokenStream([
  Group(
    bracket_kind: Round,
    tokens: TokenStream([
      Group(
        bracket_kind: Curly,
        tokens: TokenStream([]),
      ),
    ]),
  ),
  Group(
    bracket_kind: Round,
    tokens: TokenStream([
      Token(Token(
        span: Span(
          start: 10,
          end: 15,
        ),
        kind: Ident("hello"),
      )),
    ]),
  ),
]), [
  Token(
    span: Span(
      start: 2,
      end: 3,
    ),
    kind: Bracket(Opening(Curly)),
  ),
  Token(
    span: Span(
      start: 6,
      end: 7,
    ),
    kind: Bracket(Closing(Curly)),
  ),
])
