src/syntax/token_stream/snapshots/ling__syntax__token_stream__tests__token_tree_4.snap
---
source: src/syntax/token_stream/mod.rs
expression: "get_stream(\"]{}[\")"
---
(TokenStream([
  Group(
    bracket_kind: Curly,
    tokens: TokenStream([]),
    span: Span(
      start: 1,
      end: 3,
    ),
  ),
  Group(
    bracket_kind: Square,
    tokens: TokenStream([]),
    span: Span(
      start: 3,
      end: 4,
    ),
  ),
]), [
  Token(
    span: Span(
      start: 0,
      end: 1,
    ),
    kind: Bracket(Closing(Square)),
  ),
  Token(
    span: Span(
      start: 3,
      end: 4,
    ),
    kind: Bracket(Opening(Square)),
  ),
])
